# harness-lab

./: .gitignore  README.md  cli.py  pyproject.toml
contracts/: architecture.md  coding_rules.md  sprint-1.md
evaluations/: qa_checklist.md
harness/: __init__.py  agent_executor.py  agent_runtime.py  contracts_loader.py  diff_engine.py  evaluator.py  execution_reporter.py  file_runtime.py  openspec_bridge.py  reporter.py  runner.py  task_loader.py  task_validator.py
prompts/: builder.md  planner.md  reviewer.md
reports/: execution-plan.md
specs/: auth-refactor.md  greet-refactor.md
src/: app.py  app.py.bak
tasks/: feature-001.md
tests/: test_agent_executor.py  test_agent_runtime.py  test_app.py.bak  test_cli.py  test_diff_engine.py  test_execution_reporter.py  test_file_runtime.py  test_openspec_bridge.py  test_task_loader.py  test_task_validator.py
